--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -106,6 +106,11 @@ p, span, label, a, select {
     font-weight: 300;
 }
 
+span.icon {
+    font-size: 1.1em;
+    font-weight: 300;
+}
+
 a {
     color: white;
 }
@@ -221,4 +226,60 @@ td.active-day {
 .task-container {
     width: 23%;
     height: 100%;
+    padding: 0 10px;
+}
+
+.task-header {
+    height: 10%;
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-end;
+    padding: 0 8px;
+    border-bottom: 1px solid rgb(143, 143, 142);
+}
+
+.task-list-container {
+    height: 90%;
+    padding: 8px 8px 0;
+}
+
+.task-list-overflow {
+    height: 90%;
+    overflow: auto;
+}
+
+.task-button-container {
+    height: 10%;
+    width: 50%;
+    margin: 0 auto;
+}
+
+.button {
+    display: flex;
+    height: 100%;
+    width: 100%;
+    border: 1px solid rgb(24, 173, 231);
+    border-radius: 6px;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+}
+
+/* Task Form */
+.popup-container {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    background-color: rgba(0, 0, 0, 0.2);
+}
+
+.taskform-container {
+    position: absolute;
+    left: calc(50% - (450px * .5));
+    top: calc(50% - (380px * .5));
+    width: 450px;
+    height: 380px;
+    background-color: white;
 }
