--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -63,6 +63,14 @@ html, body {
     box-sizing: border-box;
 }
 
+:root {
+    --neonBlue: #5863F8;
+    --dark: #171D1C;
+    --gray: rgb(212, 206, 216);
+    --lightGray: #f3f3f3;
+    --lightblue: #5FBFF9;
+} 
+
 .container {
     font-size: 0.85rem;
 }
@@ -77,6 +85,7 @@ html, body {
 
 h1, h2, h3, h4, h5, h6 {
     font-weight: 600;
+    color: var(--dark);
 }
 
 h1 {
@@ -120,24 +129,49 @@ header {
     width: 100%;
     height: 70px;
     text-align: center;
+    border-bottom: 1px solid var(--gray);
+    padding: 0 2.5%; /*Padding equal to the main margin container*/
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background-color: var(--neonBlue);
+}
+@media (min-width: 1789.5px) {
+    header {
+        padding: 0 calc((100vw - 1700px)*0.5); /*To be equal to the main margin container*/
+    }
 }
 
-header h1 {
+header h2 {
     line-height: 70px;
+    color: white;
+}
+
+a.log-button {
+    background-color: white;
+    color: black;
+    width: 9%;
+    height: 60%;
+    border-radius: calc((70px * 0.60)/2);
+    line-height: calc(70px*0.60);
 }
 
 /* MAIN CONTAINER */
 .main-container {
-    max-width: 1600px;
-    width: 90%;
+    max-width: 1700px;
+    width: 95%;
     height: calc(100vh - 70px - 70px);
     margin: 35px auto;
     display: flex;
 }
 @media (max-width: 1020px) {
- .main-container {
-     width: calc(100% - (35px*2));
-     margin: 35px 35px;
+    header {
+        padding: 0 35px;
+    }
+
+    .main-container {
+        width: calc(100% - (35px*2));
+        margin: 35px 35px;
  }
 }
 
@@ -182,7 +216,7 @@ header h1 {
 .calendar-table {
     width: 100%;
     height: 90%;
-    border: 1px solid rgb(143, 143, 142);
+    border: 1px solid var(--gray);
     border-collapse: collapse;
 }
 
@@ -191,7 +225,11 @@ col.days-col {
 }
 
 .calendar-table th, .calendar-table td {
-    border: 1px solid rgb(143, 143, 142);
+    border: 1px solid var(--gray);
+}
+
+.calendar-table th {
+    border-top: none
 }
 
 .calendar-table th {
