--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -64,11 +64,12 @@ html, body {
 }
 
 :root {
-    --neonBlue: #5863F8;
+    --neonBlue: rgb(88, 99, 248);
+    --alphaNeonBlue: rgba(88, 99, 248, 0.2);
     --dark: #171D1C;
     --gray: rgb(212, 206, 216);
     --lightGray: #f3f3f3;
-    --lightblue: #5FBFF9;
+    --lightblue: #00c4cc;
 } 
 
 .container {
@@ -81,6 +82,19 @@ html, body {
 
 .container-short {
     font-size: 0.70rem;
+}
+
+.button {
+    background-color: var(--neonBlue);
+    color: white;
+    font-weight: 600;
+    height: 2em;
+    border-radius: 1em;
+    transition: all 0.2s ease-out 0s; 
+}
+
+.button:hover {
+    transform: translateY(-3px);
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -120,10 +134,6 @@ span.icon {
     font-weight: 300;
 }
 
-a {
-    color: white;
-}
-
 /* HEADER */
 header {
     width: 100%;
@@ -135,6 +145,7 @@ header {
     align-items: center;
     justify-content: space-between;
     background-color: var(--neonBlue);
+    background-image: linear-gradient(90deg, var(--lightblue), var(--neonBlue));
 }
 @media (min-width: 1789.5px) {
     header {
@@ -147,13 +158,13 @@ header h2 {
     color: white;
 }
 
-a.log-button {
+.log-button {
     background-color: white;
-    color: black;
     width: 9%;
-    height: 60%;
-    border-radius: calc((70px * 0.60)/2);
-    line-height: calc(70px*0.60);
+    height: 56%;
+    border-radius: calc((70px * 0.56)/2);
+    line-height: calc(70px*0.56);
+    color: var(--neonBlue);
 }
 
 /* MAIN CONTAINER */
@@ -183,15 +194,25 @@ a.log-button {
 
 .calendar-header {
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
     text-align: center;
     width: 100%;
     height: 10%;
 }
 
-.calendar-header h2 {
-    width: 80%;
+.date-select {
+    border: 2px solid var(--neonBlue);
+    color: var(--neonBlue);
+    font-weight: 600;
+    height: 1.92em;
+    border-radius: 0.96em;
+    padding-left: 10px;
+    cursor: pointer;
+}
+
+.date-select:first-child {
+    margin-right: 10px;
 }
 
 .arrow-month-container {
@@ -244,7 +265,7 @@ col.days-col {
 }
 
 .day-box:hover {
-    background-color: rgba(0, 0, 0, 0.1);
+    background-color: var(--alphaNeonBlue);
 }
 
 .day-box span {
@@ -255,13 +276,14 @@ col.days-col {
 }
 
 span.today {
-    background-color: rgb(24, 173, 231);
+    background-color: var(--neonBlue);
+    background-image: linear-gradient(135deg, var(--lightblue), var(--neonBlue));
     color: white;
     font-weight: 600;
 }
 
 td.active-day {
-    border: 2px solid rgb(24, 173, 231);
+    border: 2px solid var(--neonBlue);
 }
 
 /* TASK CONTAINER */
@@ -294,17 +316,26 @@ td.active-day {
     height: 10%;
     width: 50%;
     margin: 0 auto;
+    position: relative;
 }
 
-.button {
+.button-task {
     display: flex;
-    height: 100%;
+    /*height: 100%;*/
     width: 100%;
-    border: 1px solid rgb(24, 173, 231);
-    border-radius: 6px;
+    position: absolute;
+    bottom: 0;
     justify-content: center;
     align-items: center;
     cursor: pointer;
+}
+/*@media(min-height: 700px) {
+    .button-task {
+        position: absolute;
+        bottom: 0;
+        height: 39px;
+        border-radius: 19.5px;
+    }
 }
 
 /* Task Form */
