--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -176,6 +176,74 @@ header h2 {
     color: var(--neonBlue);
 }
 
+/* SPINNER */
+.spinner {
+    height: calc(100vh - 70px);
+    display: flex;
+    align-items: center;
+    margin: 0 auto;
+    width: 100px;
+    text-align: center;
+  }
+  
+  .spinner > div {
+    width: 25px;
+    height: 25px;
+    background-color: var(--neonBlue);
+  
+    border-radius: 100%;
+    display: inline-block;
+    -webkit-animation: sk-bouncedelay 1.4s infinite ease-in-out both;
+    animation: sk-bouncedelay 1.4s infinite ease-in-out both;
+  }
+  
+  .spinner .bounce1 {
+    -webkit-animation-delay: -0.32s;
+    animation-delay: -0.32s;
+  }
+  
+  .spinner .bounce2 {
+    -webkit-animation-delay: -0.16s;
+    animation-delay: -0.16s;
+  }
+  
+  @-webkit-keyframes sk-bouncedelay {
+    0%, 80%, 100% { -webkit-transform: scale(0) }
+    40% { -webkit-transform: scale(1.0) }
+  }
+  
+  @keyframes sk-bouncedelay {
+    0%, 80%, 100% { 
+      -webkit-transform: scale(0);
+      transform: scale(0);
+    } 40% { 
+      -webkit-transform: scale(1.0);
+      transform: scale(1.0);
+    }
+  }
+
+  /* ERROR MESSAGES */
+  .error-message-container {
+      width: 350px;
+      padding: 8px 6px;
+      text-align: center;
+      border: 2px solid rgb(173, 5, 5);
+      border-radius: 8px;
+      color: rgb(173, 5, 5);
+      /*background-color: rgb(245, 116, 116);*/
+      display: flex;
+      position: absolute; 
+  }
+
+  .error-load-message {
+      top: 85px;
+      left: calc((100vw - 350px)/2);
+  }
+
+ span.icon-error, .message-text {
+    font-size: 16px;
+  }
+
 /* MAIN CONTAINER */
 .main-container {
     max-width: 1700px;
