--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -231,20 +231,24 @@ header h2 {
     position: absolute;
     right: 0;
     top: calc((100% - 28px)/2);
+}
+
+.menu-icon-container .menu-icon {
+    font-size: 28px;
+    color: white;
     cursor: pointer;
 }
 
-.menu-icon-container span {
-    font-size: 28px;
-    color: white;
+/* SIDE BAR ACCOUNT */
+.menu-icon-container .popup-container {
+    background-color: rgba(0, 0, 0, 0);
 }
 
-/* SIDE BAR ACCOUNT */
 .sidebar-container {
     width: 170px;
     position: absolute;
-    right: 0;
-    top: 30px;
+    right: 35px;
+    top: calc(var(--headerHeight) - ((var(--headerHeight) - 28px)/2));
     background: white;
     box-shadow: 0px 1px 4px 1px rgba(0, 0, 0, 0.4);
     padding: 0 8px;
@@ -252,7 +256,7 @@ header h2 {
 }
 
 .sidebar-header, .sidebar-option {
-    border-bottom: 1px solid var(--neonBlue);
+    border-bottom: 1px solid var(--mediumGray);
     text-align: center;
 }
 
@@ -282,6 +286,7 @@ header h2 {
     padding: 8px 0;
     width: 100%;
     color: var(--neonBlue);
+    cursor: pointer;
 }
 
 /* SPINNER */
@@ -1294,7 +1299,8 @@ div.mincalendar-container {
         }
     }
 
-    @media screen and (max-width: 896px) and (orientation: landscape) {
+    @media screen and (max-width: 896px) {
+        /* HEADER HEIGHT AND MARGIN FROM MAIN CONTAINER */
         :root {
             --headerHeight: 55px;
         }
@@ -1308,12 +1314,32 @@ div.mincalendar-container {
         .container-log-button {
             width: 12%;
         }
+
+        /* POSITION AND FONT-SIZE OF ADD TASK PLUS BUTTON */
+        .task-button-container {
+            right: 10px;
+            bottom: 10px;
+        }
+
+        .task-button-container .plus-icon-task-button {
+            font-size: 28px;
+        }
+    }
+
+    @media screen and (max-width: 896px) and (orientation: landscape) {
+        /* HIDE EDIT AND DELETE ICON BUTTONS AND INCREASE THE PADDING OF TASK CONTAINER TO MAKE IT HIGHER */
+        .task-description-container {
+            padding: 10px 0 18px;
+            cursor: pointer;
+        }
+
+        .edit-delete-buttons {
+            display: none;
+        }
     }
 }
 
 /* Most used tablets resolutions in portrait mode */
-@media screen and (max-width: 1024px) and (orientation: portrait) {
-    body {
-        background: #171D1C;
-    }
+@media screen and (max-width: 1080px) and (orientation: portrait) {
+
 }
