--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1062,6 +1062,7 @@ input[type='radio']:checked ~ .custom-radio::after {
 
 div.mincalendar-container {
     width: 100%;
+    height: 100%;
 }
 
 .min-calendar-select select {
@@ -1336,10 +1337,68 @@ div.mincalendar-container {
         .edit-delete-buttons {
             display: none;
         }
+
+        /* TASKFORM */
+        :root {
+            --taskformHeight: 90vh;
+            --taskformWidth: 90vw;
+            --miniCalendarHeight: calc(var(--taskformHeight) * 0.85);
+            --miniCalendarWidth: calc(var(--taskformWidth) * 0.80);
+        }
+
+        .taskform-container {
+            width: var(--taskformWidth);
+            height: var(--taskformHeight);
+            left: 5%;
+            top: 5%;
+            padding: 40px 0 15px;
+        }
+
+        .app-icon {
+            display: none;
+        }
+
+        .taskform {
+            overflow: auto;
+        }
+
+        .taskform .close-icon {
+            display: none;
+        }
+
+        .taskform .input-container {
+            margin: 20px 0;
+        }
+
+        .min-calendar-container {
+            width: var(--miniCalendarWidth);
+            height: var(--miniCalendarHeight);
+            top: calc(((100%) - var(--miniCalendarHeight))/2);
+            left: calc(((100%) - var(--miniCalendarWidth))/2);
+        }
+
+        .min-calendar-select select {
+            font-size: calc((((var(--miniCalendarHeight)) -10px) * 0.14)/(1 + 0.7 + 0.7)); /*
+                ((minicalendarHeight - padding-top-bottom) * miniCalendarHeaderHeight) / (font-size + topSpaceInSelect + bottomSpaceInSelect) 
+            */
+        }
+
+        .min-calendar-header .month-arrow-icon {
+            font-size: 28px;
+        }
+
+        .taskform .button-container {
+            top: 5px;
+            bottom: auto;
+        }
+
+        .repeat-select-options {
+            bottom: auto;
+        }
     }
 }
 
 /* Most used tablets resolutions in portrait mode */
-@media screen and (max-width: 1080px) and (orientation: portrait) {
+@media screen and (max-width: 1024px) and (orientation: portrait) {
 
 }
